--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,40 @@
         android:padding="@dimen/inner_frame_layout_padding"
         app:layout_boxedEdges="all">
 
-        <TextView
-            android:id="@+id/text"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="180px">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/angel" />
+
+            </LinearLayout>
+        </ScrollView>
+
+        <ImageButton
+            android:id="@+id/imgok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/angel" />
+            android:layout_gravity="bottom"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ok" />
 
+        <ImageButton
+            android:id="@+id/imgcan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:background="@android:color/transparent"
+            android:src="@drawable/can" />
     </FrameLayout>
+
+
 </androidx.wear.widget.BoxInsetLayout>
